Temporary fix to horizontal scroll in landscape mode

--- a/src/App.css
+++ b/src/App.css
@@ -285,3 +285,9 @@
     margin-left: -16px !important;
     width: 100vw;
 }
+
+@media screen and (min-width: 600px) {
+    .days {
+        margin-left: -24px !important;
+    }
+}
